vms/vms/static/vms/css/style.css
/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}

.centered {
  align-content: center;
  padding-left: 6%;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px;
  background-color: #f5f5f5;
}

/* Navbar style
-------------------------------------------------- */
.navbar-default {
  background-color: #fff;
  position: relative;
}

.navbar {
  border-width: 0 1px 1px 1px;
  font-size: 16px;
  font-weight: bolder;
  font-family: 'Cairo';
}

#lower-nav {
  margin-top: 65px;
  border-top: .1em solid #54bceb;
  width: 60%;
}

#lower-nav>li>a {
  color: #101820;
}


#lower-nav>li>a:hover {
  background-color: #54BCEB;
  color: white;
}

#upper-nav>li>a {
  color: white;
  height: 40px;
  font-size: 14px;
  padding-top: 11px;
}

#upper-nav {
  position: absolute;
  right: 130px;
  top:20px;
  font-size: 16px;
  font-weight: bolder;
  font-family: 'Cairo';
}

#line {
  width: 70%;
  z-index: 2;
  height: 4px;
}

#systers-logo {
  height: 80px;
  width: 350px;
  margin: 10px;
}

#log-btn {
  background-color: #47bca0;
}

#log-btn:hover{
  background-color: #288F79;
}

#signup-btn {
  background-color: #8d2165;
  right: 20%;
}


#signup-btn:hover, #signup-admin-btn:hover {
  background-color: #690344;
}

#signup-admin-btn {
  background-color: #8d2165;
  right: 10%;
}


/* Reusable CSS
-------------------------------------------------- */
.spacer {
  margin-top: 40px;
}

.header {
  font-family: Cairo;
  color: #8d2165;
}

.link {
  color: #54BCEB;
}

.link:hover {
  color: #005C88;
}


.btn-success {
  background-color: #47BCA0;
  border-color: #47BCA0;
}

.btn-success:hover {
  background-color: #288F79;
  border-color: #288F79; 
}

.btn-info {
  background-color: #54BCEB;
  border-color: #54BCEB;
}

.btn-info:hover {
  background-color:#3F8CAB;
  border-color:#3F8CAB;
}

.btn-danger {
 background-color: #EF4135;
 border-color: #EF4135;
}

.btn-danger:hover {
 background-color: #A72D25;
 border-color: #A72D25;
}


.btn-primary, .btn-primary[disabled] {
  background-color: #005c88; 
  border-color: #005c88; 

}

.btn-primary:hover {
  background-color: #158cba;
  border-color: #158cba;
}

/* Custom page CSS
-------------------------------------------------- */
body > .container {
  padding: 15px 0;
  padding-top: 0px;
  overflow-x: hidden;
}

.container .text-muted {
  margin: 20px 0;
}

.footer > .container {
  padding-right: 15px;
  padding-left: 15px;
}

.jumbotron-custom {
  background-color: #fff;
  text-align: center;
  border: 0;
  box-shadow: none;
}

.jumbotron-custom .index {
  font-family: Cairo;
  color: #8d2165;
}

#approve {
  border: 1px solid red;
}

.approve-heading {
  text-align: center;
  color: red;
}

.default {
  background-color: #158cba;
  border-color: #158cba;
}


/* Featurettes
------------------------- */

.featurette-divider {
  margin: 80px 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -1px;
  margin-top: 0;
}

/* Profile
------------------------- */

.profile-row {
  font-size: 16px;
}

.profile-element {
  display: inline-block;
  margin-left: 15px;
}

.condensed {
  margin-top: 0;
}

.profile-pic {
  margin-bottom: 10px;
}

table a.table-anchor,
table.decoration-none  tr a {
  text-decoration: none !important;
}

/* Sign in
------------------------- */

.form-signin,
.form-signup {
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}

.social-buttons {
  padding-top: 0;
}

.social-buttons button {
  margin-bottom: 10px;
}

.or-delimiter {
  text-align: center;
  margin: 10px 0;
}

/* Community pages, news, resources
------------------------- */

.community_page,
.community_page img {
  margin: 15px 0;
}

.sidebar-community {
  margin-bottom: 30px;
}

.blog-entry h3 {
  margin-bottom: 0;
  font-size: 26px;
}

.blog-entry p.meta,
.comment p.meta {
  font-size: 11px;
}

p.meta-main {
  margin-bottom: 0;
}

ul.tag-pills {
  list-style: none;
  margin: 10px 0;
  padding: 0;
}

ul.tag-pills li {
  display: inline-block;
}

table.table-manage {
  margin-bottom: 0;
}

.community_membership a {
  text-decoration: none;
}

/* Comments
-------------------------------------------------- */
.comment {
  border-left: 3px solid #eee;
  padding: 0 10px;
}

.comment-body {
  margin: 10px 0;
}

.comments h4 {
  margin-top: 30px;
}

.leave-comment textarea {
  height: 200px;
  width: 50%;
}

p.comment-alert {
  font-style: italic;
  color: #FF851B;
}

/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 768px) {

  .featurette-heading {
    font-size: 50px;
  }
}

